0.1.1
-----
- KSP 1.2.2
- Added AVC support
- Updated bundled MM to 2.7.5
- Updated bundled CRP to 0.6.6
- Updated bundled B9PartSwitch to 1.7.1
- A number of tweaks and improvements to part names and descriptions
- Better tags for many parts
- FusionPellets and FissionPellets have replaced FusionTargets and FissionTargets for compatibility with DSEV
- Normalized all fusion tech parts to use either D-D or D-He3 fusion
- Removed tritium storage from fusion fuel tanks
- Antimatter containers now have enough builtin EC storage for 10s of unpoweredness
- Added KV-1 'Vulcan' Nuclear Smelter: processes EnrichedUranium -> FissionPellets, LqdDeuterium+LqHe3 -> FusionPellets, EnrichedUranium+Water -> NuclearSaltWater
- Added CX-A Particle Scoop: extracts LqdHydrogen, Antimatter from exoplanetary locations
- Added 'Hoover' Atmospheric Ramscoop: extracts LqdHydrogen, LqdDeuterium, LqdHe3 from atmospheres
- Added ZAP Gamma Spectrometer: detects exoplanetary Antimatter
- Added ALICE Imaging Spectrometer: Detects LqdHydrogen, LqdHe3, LqdDeuterium

0.1.0
-----
- Initial development release