@@ -47,37 +47,21 @@ PART
 			//addedMass = #$../../massOffset$
 			//addedCost = #$../../costOffset$
 		}
-		//SUBTYPE
-		//{
-		//	name = Tritium
-		//	tankType = Tritium
-		//	transform = TankTritium
-		//	addedMass = 0.198
-		//	addedCost = 112946
-		//}
-		//SUBTYPE
-		//{
-		//	name =  D/T
-		//	tankType =  DeuteriumTritium
-		//	transform = TankCombo
-		//	addedMass = 0.108
-		//	addedCost = 67768
-		//}
 		SUBTYPE
 		{
 			name =  Helium3
 			tankType =  He3
 			transform = TankTritium
-			addedMass = -0.12408
-			addedCost = 31358
+		  //addedMass = -0.12408
+			//addedCost = 31358
 		}
 		SUBTYPE
 		{
 			name =  D/He3
 			tankType =   DeuteriumHe3
 			transform = TankCombo
-			addedMass = -0.07445
-			addedCost = 18815
+			//addedMass = -0.07445
+			//addedCost = 18815
 		}
 	}
 }
