@@ -47,37 +47,21 @@ PART
 			//addedMass = #$../../massOffset$
 			//addedCost = #$../../costOffset$
 		}
-		//SUBTYPE
-		//{
-		//	name = Tritium
-		//	tankType = Tritium
-		//	transform = TritiumTank
-		//	addedMass = 0.56736
-		//	addedCost = 338839
-		//}
-		//SUBTYPE
-		//{
-		//	name =  D/T
-		//	tankType =  DeuteriumTritium
-		//	transform = DTTank
-		//	addedMass = 0.34042
-		//	addedCost = 203304
-		//}
 		SUBTYPE
 		{
 			name =  Helium3
 			tankType =  He3
 			transform = He3Tank
-			addedMass = -0.37224
-			addedCost = 94075
+			//addedMass = -0.37224
+			//addedCost = 94075
 		}
 		SUBTYPE
 		{
 			name =  D/He3
 			tankType =   DeuteriumHe3
 			transform = DHe3Tank
-			addedMass = -0.22334
-			addedCost = 203304
+			//addedMass = -0.22334
+			//addedCost = 203304
 		}
 	}
 }
