@@ -29,17 +29,15 @@ PART
 	description = Care must be taken, when storing large amounts of nuclear fuel, to keep most of it away from the rest of it, lest a violent, powerful reunification of distant uranium molecules take place.
 	attachRules = 1,1,1,1,0
 
-	mass = 13.44000
+	mass = 8.4
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.3
 	angularDrag = 2
-	crashTolerance = 6
-	maxTemp = 1200
+	crashTolerance = 15
+	maxTemp = 2000
 	breakingForce = 200
 	breakingTorque = 200
-	// cryo tank has less emissive
-	emissiveConstant = 0.2
 	bulkheadProfiles = size2, srf
 	tags = fueltank propellant water nuke juice uranium
 	RESOURCE
