@@ -29,22 +29,20 @@ PART
 	description = The classic assembly of pipes storing a suspended solution of uranium in water, carefully engineered to stop fission from occurring inside the fuel tank. Half-sized.
 	attachRules = 1,1,1,1,0
 
-	mass = 6.72000
+	mass = 4.2
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.3
 	angularDrag = 2
-	crashTolerance = 6
-	maxTemp = 1200
+	crashTolerance = 15
+	maxTemp = 2000
 	breakingForce = 200
 	breakingTorque = 200
-
-	emissiveConstant = 0.2
 	bulkheadProfiles = size2, srf
 	tags = fueltank propellant water nuke juice uranium
 	RESOURCE
 	{
-		name = NukeSaltWater
+		name = NuclearSaltWater
 		amount = 16000
 		maxAmount = 16000
 	}
