@@ -29,17 +29,15 @@ PART
 	description = Another nicely-piped water tank that just happens to have a solution of uranium inside it. Don't tell the IAEA.
 	attachRules = 1,1,1,1,0
 
-	mass = 3.36000
+	mass = 2.1
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.3
 	angularDrag = 2
-	crashTolerance = 6
-	maxTemp = 1200
+	crashTolerance = 15
+	maxTemp = 2000
 	breakingForce = 200
 	breakingTorque = 200
-	// cryo tank has less emissive
-	emissiveConstant = 0.2
 	bulkheadProfiles = size2, srf
 	tags = fueltank propellant water nuke juice uranium
 	RESOURCE
