@@ -25,7 +25,7 @@ PART
 	manufacturer =  Post-Terran Mining Corporation
 	description = This larger tank with integrated feed system and conveyors stores tiny, well-machined charges of nuclear fuel for delivery nuclear pulse engine systems. Charges can consist of fusion fuels or fission fuels.
 	attachRules = 1,1,1,1,0
-	mass = 0.57600
+	mass = 0.1
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.3
@@ -34,8 +34,8 @@ PART
 	breakingForce = 200
 	breakingTorque = 200
 	maxTemp = 1300 // = 2900
-	bulkheadProfiles = size2, srf
-	tags = fueltank
+	bulkheadProfiles = size3, srf
+	tags = fueltank micro fission fusion mag mini micro orion pulse nuke nucl farfuture
 	MODULE
 	{
 		name = ModuleB9PartSwitch
