@@ -34,8 +34,8 @@ PART
 	breakingForce = 200
 	breakingTorque = 200
 	maxTemp = 1300 // = 2900
-	bulkheadProfiles = size2, srf
-	tags = fueltank
+	bulkheadProfiles = size3, srf
+	tags = fueltank micro fission fusion mag mini micro orion pulse nuke nucl farfuture
 	MODULE
 	{
 		name = ModuleB9PartSwitch
