@@ -2,7 +2,7 @@
 B9_TANK_TYPE
 {
 	name = Deuterium
-	tankMass =  0.
+	tankMass = 0.000406
 	tankCost = 0
 
 	RESOURCE
@@ -11,40 +11,11 @@ B9_TANK_TYPE
 		unitsPerVolume = 10
 	}
 
-}
-B9_TANK_TYPE
-{
-	name = Tritium
-	tankMass =  0.0
-	tankCost = 0
-
-	RESOURCE
-	{
-		name = LqdTritium
-		unitsPerVolume = 10
-	}
-}
-B9_TANK_TYPE
-{
-	name = DeuteriumTritium
-	tankMass = 0
-	tankCost = 0
-
-	RESOURCE
-	{
-		name = LqdDeuterium
-		unitsPerVolume = 4
-	}
-	RESOURCE
-	{
-		name = LqdTritium
-		unitsPerVolume = 6
-	}
 }
 B9_TANK_TYPE
 {
 	name = He3
-	tankMass =  0.0
+	tankMass =  0.0001475
 	tankCost = 0
 
 	RESOURCE
@@ -56,7 +27,7 @@ B9_TANK_TYPE
 B9_TANK_TYPE
 {
 	name = DeuteriumHe3
-	tankMass = 0
+	tankMass = 0.00473178
 	tankCost = 0
 
 	RESOURCE
@@ -73,7 +44,7 @@ B9_TANK_TYPE
 B9_TANK_TYPE
 {
 	name = FissionPellets
-	tankMass =  0.0
+	tankMass =  0.01
 	tankCost = 0
 
 	RESOURCE
@@ -85,7 +56,7 @@ B9_TANK_TYPE
 B9_TANK_TYPE
 {
 	name = FusionPellets
-	tankMass = 0.0
+	tankMass = 0.000216
 	tankCost = 0
 	RESOURCE
 	{
